2001-03-22  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* fixed: hack for default MIDI port.

	* cleaned: documentation (installation, configuration)

2001-03-21  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* added: package sgi, containing SGI audio port

	* added: package oss, containing OSS audio port

2001-03-19  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* removed old directories: alsa0.6dev, alsadev, halsadev, hammerfalldev

	* added null audio port, to prevent locking the machine.

2001-03-15  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* Changed the audio I/O system
	Audio I/O no longer works with devices and logical devices, but
	uses a special object ("audioport") in fts/src/runtime/audio/audioport.c
	Fixed accordingly in~, out~, dac~, adc~ objects

	* Fixed the DSP compiler to accept multiple DSP connections on an inlet.
	This is used by the new implementation of audio I/O

	* Added a first implementation of audioport for ALSA 0.9.0

	* Removed fts/src/runtime/audio/audio.c

2001-02-09  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* Removed packages/alsa0.6dev and moved it to an external package

	* Changed header files structure:
          - fts header files are in include/fts
          - private header files remains in fts/src
          - packages now #include <fts/fts.h>
          - a package can be compiled either inside the jMax source tree
            or outside without changing the sources
          - header files tree is the same in the source tree and in the
            installation


2001-01-15  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* Fixed error in fts/src/sys/Makefile

2001-01-02  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* Fixed install errors in new Makefiles

2000-12-20  Francois Dechelle  <dechelle@lipari.ircam.fr>

	*  operation "Mani Pulite" on Makefiles is going on:
	  . all Makefiles for C part are now in jmax/Makefiles
	  . all platform dependent definitions are in jmax/Makefiles/Makefile.$(ARCH)